--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -1,6 +1,5 @@
 /* RESET CSS FOR PROJECT */
 
-
 /* Tao bien trong CSS */
 :root {
     --white-color: #fff;
@@ -8,7 +7,7 @@
     --text-color: #555;
     --primary-color: #ee4d2d;
 
-    --header-height: 120px;
+    --header-height: 80px;
     --navbar-height: 34px;
     --container-height: calc(var(--header-height) - var(--navbar-height));
     --btn-height: 34px;
@@ -16,11 +15,11 @@
 
 html {
     /* 1rem = 10px */
-    font-size: 62.5%; 
+    font-size: 62.5%;
     /* 1.6rem = 16px */
     line-height: 1.6rem;
     /* Truc chu ko chan */
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 
@@ -42,7 +41,10 @@ a {
     /* display: block; */
 }
 
-table, tr, th, td {
+table,
+tr,
+th,
+td {
     border-collapse: collapse;
     border: 1px solid #ccc;
 }
@@ -67,9 +69,47 @@ caption {
     padding: 18px 0;
 }
 
+/* Responsive */
+.grid {
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+    position: relative;
+}
 
+.grid__full-width {
+    width: 100%;
+}
 
+.grid__row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -5px;
+    margin-right: -5px;
+}
 
+/* Test */
+.grid__col-2 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: calc((100% / 12) * 2);
+}
 
+/* (1200px/12 * 10) / 5  */
+.grid__col-2-x5 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: calc(100% / 5);
+}
 
+.grid__col-10 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: calc((100% / 12) * 10);
+}
 
+.display-flex__center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
