--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,12 +1,7 @@
 #main {
-    display: block;
-    width: 100%;
-    height: 100%;
 	background: url("../img/khu-du-lich-sinh-thai-noi-tieng-tai-soc-trang-vuon-co-tan-long-2.jpg");
-
     background-size: cover;
     background-repeat: no-repeat;
-    position: relative;
 }
 
 #header {
@@ -52,11 +47,7 @@
 }
 
 #body {
-  
-
-    /* background-color: blueviolet; */
-    /* opacity: 0.5; */
-    min-height: 300px;
+   	min-height: 460px;
     display: block;
     padding-top: var(--header-height);
     padding-bottom: var(--header-height);
@@ -66,6 +57,63 @@
     /* background-color: brown; */
     border-color: transparent;
     background-color: rgba(21, 22, 21, 0.5);
-
     height: var(--header-height);
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
+
+#footer .footer-left {
+	color: #fff;
+	width: 400px;
+	display: flex;
+	justify-content: space-around;
+	font-weight: bold;
+	height: inherit;
+}
+
+#footer .footer-left__item {
+	font-size: 2rem;
+	height: inherit;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: transform .2s;
+}
+
+#footer .footer-left__item:hover {
+	cursor: pointer;
+	color: #2dd1ee;
+	transform: scale(1.3);
+}
+
+#footer .footer-right {
+	color: #fff;
+	width: 400px;
+	justify-content: space-around;
+	display: flex;	
+	font-weight: bold;
+	height: inherit;
+}
+
+#footer .footer-right__item {
+	font-size: 2rem;
+	height: inherit;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: transform .2s;
+}
+
+#footer .footer-right__item:hover {
+	cursor: pointer;
+	color: #2dd1ee;
+	transform: scale(1.3);
+}
+
+#footer .footer-right .icon {
+	color: #fff;
+	font-size: 2rem;	
+	padding: 0 8px;
+}
+
