--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,10 @@
 	background: url("../img/khu-du-lich-sinh-thai-noi-tieng-tai-soc-trang-vuon-co-tan-long-2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+
+	width: 100%;
+	max-width: 100%;
+	height: 100vh;
 }
 
 #header {
@@ -25,7 +29,7 @@
 
 #header .header-right {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	width: 50%;
 	height: inherit;
 }
@@ -53,6 +57,60 @@
     padding-bottom: var(--header-height);
 }
 
+#body .body-container {
+	flex-wrap: wrap;
+	margin-top: 72px;
+}
+
+#body .body-title {
+	color: #fff;
+	font-weight: bold;
+	font-size: 4rem;
+	padding-bottom: 36px;
+	display: block;
+	text-align: center;
+	/* width: 100%; */
+}
+
+#body .body-search {
+	display: block;
+	display: flex;
+	justify-content: center;
+	margin-top: 32px;
+}
+
+#body .body-search__text {
+    border: none;
+	outline: none;
+	width: 435px;
+	padding: 4px 20px;
+	font-size: 2rem;
+	color: #fff;
+	height: 50px;
+	box-sizing: border-box;
+	border-radius: 4px;
+	background-color: #2d392f;
+	
+}
+
+#body .body-search__btn {
+    min-width: 120px;
+    color: #fff;
+    background-color: #68da94;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    border-radius: 20%;
+    font-size: 2rem;
+	font-weight: bold;
+    cursor: pointer;
+	margin-left: 2px;
+}
+
+#body .body-search__btn {
+
+}
+
 #footer {
     /* background-color: brown; */
     border-color: transparent;
@@ -61,6 +119,10 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 
 #footer .footer-left {
@@ -78,13 +140,13 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: transform .2s;
+	/* transition: transform .2s; */
 }
 
 #footer .footer-left__item:hover {
 	cursor: pointer;
 	color: #2dd1ee;
-	transform: scale(1.3);
+	/* transform: scale(1.3); */
 }
 
 #footer .footer-right {
@@ -102,13 +164,13 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: transform .2s;
+	/* transition: transform .2s; */
 }
 
 #footer .footer-right__item:hover {
 	cursor: pointer;
 	color: #2dd1ee;
-	transform: scale(1.3);
+	/* transform: scale(1.3); */
 }
 
 #footer .footer-right .icon {
