--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -137,6 +137,51 @@
     top: 70%;
 }
 
+#body #search {
+	text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	padding: 0px 150px;
+}
+
+#search .search-group {
+	width: 50%;
+    display: flex;
+    margin: 40px 0px;
+}
+
+#search .search-group__label {
+	font-size: 3rem;
+    color: var(--white-color);
+	min-width: 150px;
+	text-align: right;
+	line-height: 2.8rem;
+}
+
+#search .search-group__input {
+	height: 30px;
+    flex: 1;
+	text-align: center;
+	font-size: 2rem;
+}
+
+#body .search__btn {
+	position: absolute;
+    top: 72%;
+    left: 46%;
+    height: 50px;
+    width: 160px;
+    font-size: 2.5rem;
+    border-radius: 30px;
+    color: var(--white-color);
+    background-color: #5bcb97;
+	cursor: pointer;
+}
+
+#body .search__btn:active {
+	opacity: 0.5;
+}
 #footer {
     /* background-color: brown; */
     border-color: transparent;
