--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,11 +1,14 @@
 #main {
-	background: url("../img/khu-du-lich-sinh-thai-noi-tieng-tai-soc-trang-vuon-co-tan-long-2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 
 	width: 100%;
 	max-width: 100%;
 	height: 100vh;
+}
+
+.main-search {
+	background-color: turquoise !important;
 }
 
 #header {
