--- a/src/assets/css/info.css
+++ b/src/assets/css/info.css
@@ -19,24 +19,38 @@
 #body .body-container__item {
     width: calc((100% - 48px - 48px) / 2);
     height: calc((100% - 32px -32px));
+}
 
-    /* overflow: hidden;
-    text-overflow: ellipsis; */
+#body .body-container__toggle--img {
+    height: 70%;
 }
 
 #body .body-container__img {
     width: 100%;
-    height: 50%;
+    height: 60%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+.display-none {
+    display: none !important;
+}
+
+
+#body .body-container__toggle--img.location {
+    background-image: url(../img/google-maps-new-interface1_ohxi.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 70%;
 }
 
 #body .body-container__sub {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    height: 20%;
+    height: 34%;
     margin-top: 3%;
 }
 
@@ -70,6 +84,7 @@
     background-color: #02353c;
     align-items: center;
 }
+
 
 #body .body-container__location--icon {
     font-size: 5rem;
