--- a/src/assets/css/info.css
+++ b/src/assets/css/info.css
@@ -100,7 +100,7 @@
 #body .body-container__item--text {
     color: #000;
     height: 13%;
-    font-size: 3rem;
+    font-size: 2.6rem;
     padding: 6px 12px;
     line-height: 3rem;
     word-wrap: break-word;
@@ -117,14 +117,13 @@
 
 #body .body-container__item--text2--des {
     line-height: 4rem;
-    /* display: -webkit-box;
-    -webkit-line-clamp: 12;
-    -webkit-box-orient: vertical; */
     overflow: scroll;
     text-overflow: ellipsis;
     font-size: 2rem;
-    height: 100%;
+    height: 80%;
     margin-top: 12px;
+    border: 1px solid #ccc;
+    padding: 8px;
 }
 
 #footer {
